unpackaged/main/default/objects/Buyapowa_Integration_Details__mdt/Buyapowa_Integration_Details__mdt.object-meta.xml
<CustomObject>
    <label>Buyapowa Integration Detail</label>
    <pluralLabel>Buyapowa Integration Details</pluralLabel>
</CustomObject>