unpackaged/main/default/objects/Buyapowa_Integration_Details__mdt/fields/Auth_Id__c.field-meta.xml
<CustomField>
    <fullName>Auth_Id__c</fullName>
    <label>Auth_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>