unpackaged/main/default/objects/Buyapowa_Integration_Details__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>