unpackaged/main/default/objects/Buyapowa_Integration_Details__mdt/fields/Campaign_Slug__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Slug__c</fullName>
    <label>Campaign_Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>